--- a/scripts/7_analyses/make_statistics.Rmd
+++ b/scripts/7_analyses/make_statistics.Rmd
@@ -153,6 +153,14 @@ ggsave("../../figures/boxplots_by_antibody_grid.pdf", width = 16.5, height = 12.
 
 
 ```{r}
+wilcox.test(data %>% 
+                  filter(.data[[x]] %in% z) %>% 
+                  pull(.data[[y]]) ~ data %>% 
+                  filter(.data[[x]] %in% z) %>% 
+                  pull(.data[[x]]))
+```
+
+```{r}
 make_mutation_boxplot <- function(x, y, x_lab, y_lab, ref_aa){
   
   ## Get mutations and put ref_aa first
@@ -212,44 +220,76 @@ y_lab = "Mean van der Waals Energy"
 x = "aa_4jug_pos_224"
 x_lab = "N224 Mutation"
 
-make_mutation_boxplot(x, y, x_lab, y_lab, ref_aa = "N")
+make_mutation_boxplot(x, y, x_lab, y_lab, ref_aa = substr(x_lab,1,1))
 ```
 
 ```{r}
-metrics_cols <- list(c("Mean van der Waals Energy", "vdw_mean"),
-                     c("Mean Electrostatic Energy", "elec_mean"),
-                     c("Mean Desolvation Energy", "desolv_mean"),
-                     c("Mean Buried Surface Area"= "bsa_mean"),
-                     c("Mean HADDOCK Score", "haddock_score_mean"),
-                     c("Mean Total Score", "total_mean"))
+mut_plot_df <- data.frame(
+  x = c(
+    "aa_4jug_pos_158",
+    "aa_4jug_pos_160",
+    "aa_4jug_pos_190",
+    "aa_4jug_pos_224",
+    "aa_4jug_pos_225",
+    "aa_4jug_pos_226",
+    "aa_4jug_pos_228"
+  ),
+  x_lab = c(
+    "N158 Mutation",
+    "T160 Mutation",
+    "E190 Mutation",
+    "N224 Mutation",
+    "G225 Mutation",
+    "Q226 Mutation",
+    "G228 Mutation"
+    )
+)
 
-mutations_cols <- list(c("N158 Mutation", "aa_4jug_pos_158"),
-                      c("T160 Mutation", "aa_4jug_pos_160"),
-                      c("E190 Mutation", "aa_4jug_pos_190"),
-                      c("N224 Mutation", "aa_4jug_pos_224"),
-                      c("G225 Mutation", "aa_4jug_pos_225"),
-                      c("Q226 Mutation", "aa_4jug_pos_226"),
-                      c("G228 Mutation", "aa_4jug_pos_228"))
+met_plot_df <- data.frame(
+  y = c(
+    "vdw_mean"#,
+    # "elec_mean",
+    # "desolv_mean",
+    # "bsa_mean",
+    # "haddock_score_mean",
+    # "total_mean"
+  ),
+  y_lab = c(
+    "Mean van der Waals Energy"#,
+    # "Mean Electrostatic Energy",
+    # "Mean Desolvation Energy",
+    # "Mean Buried Surface Area",
+    # "Mean HADDOCK Score",
+    # "Mean Total Score"
+  )
+)
+
 
 mutation_plots <- list()
 ## Make plot for each combination
-for (metric in metrics_cols){
-  for (mut in mutations_cols){
-    # print(metric)
-    # print(mut)
-    x = metric[2]
-    x_lab = metric[1]
-    y = mut[2]
-    y_lab = mut[1]
-    ref_aa = substr(y_lab,1,1)
+for (mut in 1:nrow(mut_plot_df)){
+  for (met in 1:nrow(met_plot_df)){
+    x = mut_plot_df[mut, 1]
+    x_lab = mut_plot_df[mut, 2]
+    y = met_plot_df[met, 1]
+    y_lab = met_plot_df[met, 2]
+    ref_aa = substr(x_lab,1,1)
+    # print(paste0("Making plot of ",x ," and " , y))
     plot <- make_mutation_boxplot(x, y, x_lab, y_lab, ref_aa)
     mutation_plots[[paste0(x, "_", y)]] <- plot
   }
 }
-
-# mutation_plots_grid <- ggarrange(plotlist = mutation_plots, ncol = 6)
-# mutation_plots_grid
 ```
+
+```{r}
+mutation_plots_grid <- ggarrange(plotlist = mutation_plots#,
+                                 # ncol = 6, nrow = 7
+                                 )
+
+mutation_plots_grid
+```
+
+
 
 ## Heatmaps
 
