--- a/scripts/7_analyses/structure_analysis/pymol_commands.ipynb
+++ b/scripts/7_analyses/structure_analysis/pymol_commands.ipynb
@@ -4,46 +4,292 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# PyMOL Commands"
+    "# PyMOL Styling"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [],
    "source": [
-    "from pymol import cmd\n",
-    "\n",
-    "cmd.reinitialize(\"everything\")\n",
-    "cmd.load(pdb_path)\n",
-    "\n",
-    "## Color chain A grey50\n",
-    "cmd.color(\"grey50\", f\"chain {chain1}\")\n",
-    "\n",
-    "## color chain B green\n",
-    "cmd.color(\"green\", f\"chain {chain2}\")"
+    "from biopandas.pdb import PandasPdb\n",
+    "import pandas as pd\n",
+    "import numpy as np\n",
+    "from scipy.spatial.distance import cdist\n",
+    "from pymol import cmd"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def highlight_residues(chain:str=\"A\", residues:list=[], style:str=\"sticks\", color:str=\"red\"):\n",
+    "def find_polar_contacts(pdb_path: str, chain1: str, chain2: str, cutoff=3.5):\n",
+    "    \"\"\"\n",
+    "    Find polar contacts between two input chains in a PDB file using BioPandas.\n",
+    "    \n",
+    "    Parameters:\n",
+    "    pdb_path (str): Path to the PDB file.\n",
+    "    chain1 (str): Identifier for the first chain.\n",
+    "    chain2 (str): Identifier for the second chain.\n",
+    "    cutoff (float): Distance cutoff for identifying polar contacts.\n",
+    "    \n",
+    "    Returns:\n",
+    "    dict: A dictionary with chain identifiers as keys and lists of residue numbers involved in polar contacts as values.\n",
+    "    \"\"\"\n",
+    "    ## Load PDB file\n",
+    "    ppdb = PandasPdb().read_pdb(pdb_path)\n",
+    "    df = ppdb.df['ATOM']\n",
+    "\n",
+    "    ## Select polar atoms (N, O) from each chain\n",
+    "    polar_atoms_chain1 = df[(df['chain_id'] == chain1) & (df['element_symbol'].isin(['N', 'O']))]\n",
+    "    polar_atoms_chain2 = df[(df['chain_id'] == chain2) & (df['element_symbol'].isin(['N', 'O']))]\n",
+    "\n",
+    "    ## Calculate pairwise distances between polar atoms\n",
+    "    distances = cdist(polar_atoms_chain1[['x_coord', 'y_coord', 'z_coord']].values, \n",
+    "                      polar_atoms_chain2[['x_coord', 'y_coord', 'z_coord']].values)\n",
+    "\n",
+    "    ## Find pairs of atoms within the distance cutoff\n",
+    "    pairs = np.argwhere(distances <= cutoff)\n",
+    "\n",
+    "    ## Find corresponding residue numbers and names\n",
+    "    residue_numbers_chain1 = polar_atoms_chain1['residue_number'].values\n",
+    "    residue_numbers_chain2 = polar_atoms_chain2['residue_number'].values\n",
+    "\n",
+    "    residue_names_chain1 = polar_atoms_chain1['residue_name'].values\n",
+    "    residue_names_chain2 = polar_atoms_chain2['residue_name'].values\n",
+    "\n",
+    "    polar_contact_residues = []\n",
+    "    for pair in pairs:\n",
+    "        polar_contact_residues.append([\n",
+    "            residue_names_chain1[pair[0]],\n",
+    "            residue_numbers_chain1[pair[0]],\n",
+    "            residue_names_chain2[pair[1]],\n",
+    "            residue_numbers_chain2[pair[1]]\n",
+    "            ])\n",
+    "\n",
+    "    ## Make polar contact residues a set\n",
+    "    polar_contact_residues = set(map(tuple, polar_contact_residues))\n",
+    "\n",
+    "    ## Assemble dictionary\n",
+    "    polar_contact_residues_dict = {\n",
+    "        f\"resn_chain{chain1}\": [],\n",
+    "        f\"resi_chain{chain1}\": [],\n",
+    "        f\"resn_chain{chain2}\": [],\n",
+    "        f\"resi_chain{chain2}\": []\n",
+    "        }\n",
+    "    \n",
+    "    for pair in polar_contact_residues:\n",
+    "        polar_contact_residues_dict[f\"resn_chain{chain1}\"].append(pair[0])\n",
+    "        polar_contact_residues_dict[f\"resi_chain{chain1}\"].append(pair[1])\n",
+    "        polar_contact_residues_dict[f\"resn_chain{chain2}\"].append(pair[2])\n",
+    "        polar_contact_residues_dict[f\"resi_chain{chain2}\"].append(pair[3])\n",
+    "\n",
+    "    ## Convert to dataframe\n",
+    "    polar_contact_residues_df = pd.DataFrame(polar_contact_residues_dict)\n",
+    "\n",
+    "    return polar_contact_residues_df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>experiment_id</th>\n",
+       "      <th>pdb_path</th>\n",
+       "      <th>pos_111</th>\n",
+       "      <th>pos_112</th>\n",
+       "      <th>pos_113</th>\n",
+       "      <th>pos_114</th>\n",
+       "      <th>pos_115</th>\n",
+       "      <th>pos_116</th>\n",
+       "      <th>pos_117</th>\n",
+       "      <th>pos_118</th>\n",
+       "      <th>...</th>\n",
+       "      <th>pos_261</th>\n",
+       "      <th>pos_262</th>\n",
+       "      <th>pos_263</th>\n",
+       "      <th>pos_264</th>\n",
+       "      <th>pos_265</th>\n",
+       "      <th>pos_266</th>\n",
+       "      <th>pos_267</th>\n",
+       "      <th>pos_268</th>\n",
+       "      <th>pos_269</th>\n",
+       "      <th>pos_270</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>477</th>\n",
+       "      <td>AVFluIgG01__EPI168674</td>\n",
+       "      <td>../../../data/results/AVFluIgG01__EPI168674/ou...</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1622</th>\n",
+       "      <td>100F4__EPI2429052</td>\n",
+       "      <td>../../../data/results/100F4__EPI2429052/output...</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1795</th>\n",
+       "      <td>13D4__EPI3358339</td>\n",
+       "      <td>../../../data/results/13D4__EPI3358339/output/...</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>3 rows × 162 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "              experiment_id  \\\n",
+       "477   AVFluIgG01__EPI168674   \n",
+       "1622      100F4__EPI2429052   \n",
+       "1795       13D4__EPI3358339   \n",
+       "\n",
+       "                                               pdb_path  pos_111  pos_112  \\\n",
+       "477   ../../../data/results/AVFluIgG01__EPI168674/ou...        0        0   \n",
+       "1622  ../../../data/results/100F4__EPI2429052/output...        0        0   \n",
+       "1795  ../../../data/results/13D4__EPI3358339/output/...        0        0   \n",
+       "\n",
+       "      pos_113  pos_114  pos_115  pos_116  pos_117  pos_118  ...  pos_261  \\\n",
+       "477         0        0        0        0        0        0  ...        0   \n",
+       "1622        0        0        0        0        0        0  ...        0   \n",
+       "1795        0        0        0        0        0        0  ...        0   \n",
+       "\n",
+       "      pos_262  pos_263  pos_264  pos_265  pos_266  pos_267  pos_268  pos_269  \\\n",
+       "477         0        0        0        0        0        0        0        0   \n",
+       "1622        0        0        0        0        0        0        0        0   \n",
+       "1795        0        0        0        0        0        0        0        0   \n",
+       "\n",
+       "      pos_270  \n",
+       "477       0.0  \n",
+       "1622      0.0  \n",
+       "1795      0.0  \n",
+       "\n",
+       "[3 rows x 162 columns]"
+      ]
+     },
+     "execution_count": 36,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "contacts_df = pd.read_csv('polar_contacts.csv')\n",
+    "\n",
+    "## Filter to a list of experiment_ids\n",
+    "experiment_ids_to_show = [\n",
+    "    'AVFluIgG01__EPI168674', ## Worst\n",
+    "    '100F4__EPI2429052', ## Best\n",
+    "    '13D4__EPI3358339' ## Best Mexican isolate\n",
+    "    ]\n",
+    "\n",
+    "contacts_df = contacts_df[contacts_df['experiment_id'].isin(experiment_ids_to_show)]\n",
+    "\n",
+    "contacts_df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 58,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def highlight_residues(object:str=\"obj01\", chain:str=\"A\", residues:list=[], style:str=\"sticks\", color:str=\"red\"):\n",
     "    \"\"\"\n",
     "    Highlight residues in a chain in a given style and color.\n",
     "\n",
     "    Parameters:\n",
+    "    object (str): Object name.\n",
     "    chain (str): Chain identifier.\n",
     "    residues (list): List of residue numbers.\n",
     "    style (str): Style to use for highlighting.\n",
     "    color (str): Color to use for highlighting.\n",
     "    \"\"\"\n",
     "    ## Generate a selection string for the residues\n",
-    "    selection = \" or \".join([f\"(chain {chain} and resi {res})\" for res in residues])\n",
-    "    selection_name = f\"highlight_{chain}\"\n",
+    "    selection = \" or \".join([f\"({object} and chain {chain} and resi {res})\" for res in residues])\n",
+    "    ## Generate a selection name\n",
+    "    selection_name = f\"highlight_{object}_{chain}\"\n",
     "    ## Create the selection in PyMOL\n",
     "    cmd.select(selection_name, selection)\n",
     "    ## Show the selection as sticks\n",
@@ -54,29 +300,84 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 61,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Experiment ID: AVFluIgG01__EPI168674\n",
+      "Experiment ID: 100F4__EPI2429052\n",
+      "Experiment ID: 13D4__EPI3358339\n"
+     ]
+    }
+   ],
    "source": [
-    "print(\"Chain A: \", list(set(contacts[\"resi_chainA\"].tolist())), \"\\n\",\n",
-    "      \"Chain B: \", list(set(contacts[\"resi_chainB\"].tolist())))"
+    "chain1 = \"A\"\n",
+    "chain2 = \"B\"\n",
+    "chain1_color = \"0x005035\"\n",
+    "chain2_color = \"0xA49665\"\n",
+    "cutoff = 3.5\n",
+    "\n",
+    "cmd.reinitialize(\"everything\")\n",
+    "\n",
+    "for index, experiment in contacts_df.iterrows():\n",
+    "    experiment_id = experiment['experiment_id']\n",
+    "    print(f\"Experiment ID: {experiment_id}\")\n",
+    "    pdb_path = experiment['pdb_path']\n",
+    "    contacts = find_polar_contacts(pdb_path, chain1, chain2, cutoff)\n",
+    "\n",
+    "    cmd.load(pdb_path, experiment_id)\n",
+    "\n",
+    "    ## Color chain A\n",
+    "    cmd.color(chain1_color, f\"{experiment_id}, chain {chain1}\")\n",
+    "\n",
+    "    ## color chain B\n",
+    "    cmd.color(chain2_color, f\"{experiment_id}, chain {chain2}\")\n",
+    "\n",
+    "    ## Highlight Chain A\n",
+    "    highlight_residues(object=experiment_id,\n",
+    "                       chain = \"A\",\n",
+    "                       residues = list(set(contacts[\"resi_chainA\"].tolist())),\n",
+    "                       color = chain1_color)\n",
+    "\n",
+    "    ## Highlight Chain B\n",
+    "    highlight_residues(object=experiment_id,\n",
+    "                       chain = \"B\",\n",
+    "                       residues = list(set(contacts[\"resi_chainB\"].tolist())),\n",
+    "                       color = \"firebrick\")\n",
+    "    \n",
+    "    ## Set chain A opacity\n",
+    "    cmd.set(\"cartoon_transparency\", 0.5, f\"chain {chain1}\")\n",
+    "\n",
+    "## Recolor all chain A's\n",
+    "cmd.color(chain1_color, f\"chain {chain1}\")\n",
+    "\n",
+    "## Load reference structure\n",
+    "# cmd.load(\"1rd8_HA1_chainA.pdb\", \"1rd8\")\n",
+    "\n",
+    "## Align everything to reference structure\n",
+    "# cmd.align(\"*\", \"1rd8\")\n",
+    "\n",
+    "## Remove reference structure\n",
+    "# cmd.delete(\"1rd8\")\n",
+    "\n",
+    "## Zoom to fit\n",
+    "cmd.zoom(\"all\")\n",
+    "\n",
+    "## Save PyMOL Session\n",
+    "cmd.save(\"subset_polar_contacts_session.pse\")\n",
+    "\n",
+    "# cmd.reinitialize(\"everything\")\n"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "## Highlight Chain A\n",
-    "highlight_residues(chain = \"A\",\n",
-    "                   residues = list(set(contacts[\"resi_chainA\"].tolist())),\n",
-    "                   color = \"grey50\")\n",
-    "\n",
-    "## Highlight Chain B\n",
-    "highlight_residues(chain = \"B\",\n",
-    "                   residues = list(set(contacts[\"resi_chainB\"].tolist())),\n",
-    "                   color = \"red\")"
+    "---------------------\n",
+    "### Temp Viewing"
    ]
   },
   {
@@ -146,8 +447,22 @@
   }
  ],
  "metadata": {
+  "kernelspec": {
+   "display_name": "Python 3",
+   "language": "python",
+   "name": "python3"
+  },
   "language_info": {
-   "name": "python"
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.7.13"
   }
  },
  "nbformat": 4,
